# AutoCropApp

./: AttentionBased.cpp  AutoCropVCBSCP.cpp  AutoCropVCBSCP.h  CMakeLists.txt  Main.cpp  Makefile  README.md  SalMapMargolin.cpp
dataset/: get_dataset.py  info.txt
models/: FeatMat21.yml  Trained_model21.yml  Trained_model85.yml
src/: Arguments.cpp  Arguments.h  AttentionBased.cpp  AttentionBased.h  AutoCropVCBSCP.cpp  AutoCropVCBSCP.h  AutocropFang.cpp  AutocropFang.h  AutocropStentiford.cpp  AutocropStentiford.h  AutocropSuh.cpp  AutocropSuh.h  CompositionModel.cpp  CompositionModel.h  Main.cpp  SalMapItti.cpp  SalMapItti.h  SalMapMargolin.cpp  SalMapMargolin.h  SalMapStentiford.cpp  SalMapStentiford.h
text-src/: fitthesis.cls  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.tex
